# CORA-manifold

./: CMakeLists.txt  main.cpp
include/: CORA_types.h  MatrixManifold.h  ScaledStiefelProduct.h  StiefelProduct.h
src/: ScaledStiefelProduct.cpp  StiefelProduct.cpp
